--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "moment": "^2.24.0",
     "mongodb": "^3.3.2",
     "mongoose": "^5.7.1",
-    "now": "^16.2.0"
+    "now": "^16.2.0",
+    "twit": "^2.2.11"
   },
   "devDependencies": {
     "mockingoose": "^2.13.2",
